0212: Creating layout for tt08-vga-fun's CSDAC

--- a/0212-2024-08-11.md
+++ b/0212-2024-08-11.md
@@ -3,3 +3,86 @@
 | Previous journal: | Next journal: |
 |-|-|
 | [**0211**-2024-08-09.md](./0211-2024-08-09.md) | *Next journal TBA* |
+
+# Creating layout for tt08-vga-fun's CSDAC
+
+*   Given CSDAC (`csdac.sch` and `.sym`) is now parametric, we need an instance of it with fixed values, suitable for SPICE export and layout.
+*   I created `csdac_nom.sch`
+*   Simulation => LVS => LVS netlist
+*   'N' to generate netlist => `simulation/csdac_nom.spice`: This contains `.subckt csdac` with all the defaults included for parameters, and also instantiates it as `x1` (also setting those same default parameters).
+*   Create `mag/` dir and copy in files from tt-vga-fun/mag:
+    ```
+    Makefile
+    .gitignore
+    README.md
+    tcl/
+    ```
+*   Do a commit with these files as-is.
+*   Download new versions per tt08 from [magic_challenge commit a2ce28e](https://github.com/mattvenn/magic_challenge/tree/a2ce28e3a09c47a49de79d390f7b86ec1f346789/mag).
+*   Edit `mag/Makefile` per project name and select 3v3 template.
+*   Note:
+    ```bash
+    # Get 1x2 3v3 template:
+    make tt_analog_1x2_3v3.def
+
+    # Get the template and prepare it with 'typical' power/features:
+    make start
+
+    # Extraction of SPICE file from project layout, for LVS:
+    make tt_um_algofoogle_tt08_vga_fun.lvs.spice
+
+    # Likewise for sim:
+    make tt_um_algofoogle_tt08_vga_fun.sim.spice
+    ```
+*   Do `make start` to create generic `tt_um_algofoogle_tt08_vga_fun.mag`
+*   `make magic`
+*   Template layout features:
+    *   Box is 136.14x225.76um (NOTE: Narrower than normal 160um TT size because of extra 3.3V power gating?)
+    *   3 power straps on metal4, all 2um wide, spaced 1um. From LHS: VDPWR, VGND, VAPWR
+    *   NOTE: Minimum power strap width is 1.2um
+*   `:grid 50nm` then `:snap user`
+*   Create a new cell: Cell => New: Name it `csdac_nom`
+*   File => Import SPICE: `xschem/simulation/csdac_nom.spice`
+    ```
+    invalid bareword "MULTI"
+    in expression "MULTI";
+    should be "$MULTI" or "{MULTI}" or "MULTI(...)" or ...
+    ```
+*   I've tried a few different methods (including modifying `MULTI` to `{MULTI}` in the csdac schematic), but it doesn't seem to help Magic, so I'm not sure if there's a proper way in Xschem to output a materialized SPICE netlist for Magic.
+*   I ended up changing csdac_nom to simply be a fixed-value copy of csdac.
+
+
+# Notes
+
+*   Tim Edwards' estimates of current limits per metal layer:
+    | Layer              | ma/um      |
+    |-|-:|
+    | Local interconnect | (unknown)  |
+    | Metal1             | 0.65       |
+    | Metal2             | 0.65       |
+    | Metal3             | 1.50       |
+    | Metal4             | 1.50       |
+    | Metal5             | 2.30       |
+    *   So I'd want probably ~800nm wires at lower levels to cover the CSDAC requirements of ~500uA.
+*   Connect ports via m4 instead of m1?
+*   Ensure VCC/GND and Vpos/Vneg are sufficiently thick at all points.
+*   It looks like it's possible to place device instances (p-cells) used in a `.mag` layout into a subdirectory and reference them by editing the `use` statements, but is this a bad idea?
+    *   Evidently this is the wrong way:
+        ```mag
+        use csdac_nom__devices/sky130_fd_pr__nfet_01v8_SMGLWN  XMmirror
+        ```
+    *   ...and this is the right way:
+        ```mag
+        use sky130_fd_pr__nfet_01v8_SMGLWN  XMmirror csdac_nom__devices
+        ```
+    *   ...except where there are multiple instances of a device with the same parameters, in which case only the FIRST specifies the load path, and the rest just instance it by name without the path.
+    *   NOTE: One issue with doing this seems to be that the additional instances don't continue to be expanded if you move them. Weird!
+    *   Actually the problem seems to be that you have to expand ALL of them, or they compete for visibility.
+*   res_xhigh_po [can take up to 500uA/um but 100uA/um is recommended](https://skywater-pdk.readthedocs.io/en/main/rules/device-details.html#id91). [Same current for res_high_po](https://skywater-pdk.readthedocs.io/en/main/rules/device-details.html#id83).
+*   Thus, if we wanted to TEST double drive strength across 5.73um resistor, that would be fine, if most of the rest of the time it is kept to single-drive strength (~500uA).
+*   If we have to save on area, we could go for 2p85 (halving width and length).
+*   What happens if we export a SPICE file for a parametric schematic, and import that directly into Magic? Will Magic complain about unknown parameters? Can we also export just the SYMBOL that has defaults embedded?
+    *   When trying to export the symbol (`.sym`) it says we need to use the 'Options => Netlist format / Symbol mode' menu to choose netlisting format.
+    *   What this means is choosing the grey 'Spice' option.
+    *   I can't get it to generate anything sensible from a symbol anyway.
+*   R2R DAC or binary-weighted DAC to determine Vg of a FET or push/pull, or CSDAC output voltage driving Vg?
