Update 0213 with extraction results and next steps

--- a/0213-2024-08-16.md
+++ b/0213-2024-08-16.md
@@ -50,11 +50,58 @@ Features of the layout include:
 *   Big pull-up resistors on the right for each of Vpos and Vneg. These need to be this large for current capacity, i.e. I want to keep them under the 100uA/um recommended limit, and these are 5.73um wide (thus 573uA gives enough headroom).
 
 
+# Extraction and simulation
+
+```bash
+PROJECT_NAME=csdac_nom make csdac_nom.sim.spice
+```
+
+This produces `mag/csdac_nom.sim.spice` with a large number of parasitic resistors and capacitors, as expected. To my surprise, the port order is sensible (even though the port numbers are odd in the .mag file):
+
+```spice
+.subckt csdac_nom_parax p0 n0 p1 n1 p2 n2 p3 n3 p4 n4 p5 n5 p6 n6 p7 n7 vcc vss Vpos Vneg Vbias
+```
+
+Back in `xschem/` I copied `tb_csdac.sch` to `tb_csdac_nom.sch` and edited it to specifically use `csdac_nom` (rather than the parametric version, `csdac`). I also copied `csdac.sym` to `csdac_nom.sym` and fixed that up to make it an easy drop-in.
+
+Create a 2nd copy of the main DUT schematic, name its outputs to include `_pex` as a suffix, then edit the 2nd instance (that will represent the layout/parasitic-extraction version) to include:
+
+```
+schematic=csdac_nom_parax.sim
+spice_sym_def="tcleval(.include [file normalize ../mag/csdac_nom.sim.spice])"
+tclcommand="textwindow [file normalize ../mag/csdac_nom.sim.spice]"
+```
+
+I adjusted the graph a little (taking out Vpos) and the performance seems pretty consistent, though Vbias_pex is a little flat, meaning less current through the transistors:
+
+![](i/0213-extraction-sim.png)
+
 
 
 # Next steps
 
-*   Extraction, and compare simulation in Xschem.
+## Digital block and integration
+
+The 3v3 1x2 TT layout is 136.14um x 225.76um. For some reason there's an extra region on the RHS that is unusable but visible. I don't know what that is.
+
+Usable area in the layout is probably about 125x215um.
+
+The remaining usable area for a digital block would be about 125x145um:
+
+![](i/0213-available-space.png)
+
+If I needed more, I could forget the 3v3 experiment, or go for 2x2 tiles.
+
+I can't remember what hardening size I got to for my updated Verilog (inc. improved features, line debug, etc.). It might've been [this from 0205 (2024-05-30)](https://github.com/algofoogle/journal/blob/master/0205-2024-05-30.md#hardening); if so, I got a 117x117um harden apparently.
+
+Ah, it's obvious why it had to be a lot smaller originally: https://github.com/algofoogle/tt-vga-fun/blob/main/docs/info.md -- the RDACs dominate.
+
+## Other stuff
+
+*   Don't forget to check out: https://github.com/htfab/flash-adc/tree/main/xschem -- borrow buffer, vfollower, opamp?
+
+
+
 
 # Other possible improvements
 
