--- a/0215-2024-08-21.md
+++ b/0215-2024-08-21.md
@@ -4,11 +4,13 @@
 |-|-|
 | [**0214**-2024-08-17.md](./0214-2024-08-17.md) | *Next journal TBA* |
 
-# Simulation and next steps for tt08-vga-fun
+# New 3x DAC layout and simulation for tt08-vga-fun
 
-*   Try simulation (based on tt06-grab-bag or tt-vga-fun repos):
+![](./i/0215-tt08-layout-3dac.png)
+
+*   I did simulations (based on tt06-grab-bag or tt-vga-fun repos):
     *   Extraction and full analog simulation:
-        *   See:
+        *   Basis:
             [0202](https://github.com/algofoogle/journal/blob/master/0202-2024-05-15.md),
             [0203](https://github.com/algofoogle/journal/blob/master/0210-2024-08-09.md)
         *   Test sim speed and output quality.
@@ -19,6 +21,7 @@
             *   Running the sim and capturing output, inc. interrupting/resuming
             *   Rendering output to PNG
     *   Is co-simulation worth it? Can it work, and will it be fast? May not simulate switch gates perfectly.
+        *   It's orders of magnitude faster than full circuit sim, and probably accurate enough to test out my DAC layout.
     *   Verilator sim.
         *   Change sim to use actual TT08 top module (and include dummy black boxes for DAC, etc).
 *   Other circuits and ideas:
@@ -28,7 +31,7 @@
 # Explanation of digital block control inputs
 
 ```
-Meaning of input bits at reset:
+Meaning of ui_in input bits at reset:
      7   Timing: 0=VGA; 1=1440x900
      6:4 Mode: 
          0: MODE_PASS  Input passes to output of all 3 DACs (greyscle)
@@ -98,21 +101,77 @@ NOTE:
   Bits [2:0] = (ui_in[6:4]^mode)
 ```
 
+# Simulation test cases
+
+*   BARS mode, alternating every pixel, green is primary: `ui_in` = `0010_0001`
+*   As above, alternating every 2nd pixel: `0010_0101`
+*   XOR2, starting on line 32: `0101_1010`
+*   Ramp on all 3 channels equally ('grey' reference): `0001_0011`
+
+![](./i/0215-tt08-patterns.png)
+
+
+# Verilator simulation
+
+```bash
+cd sim/verilator
+make csr
+```
+
+Keys changed from previous Verilator sims I've done:
+*   T, G, B, respectively turn off rendering of R, G, B channels (noting that 'R' key is reserved for reset)
+*   F11 switches between rendering the DAC output (RGB888), and `uo_out` (RGB222) outputs.
+
+
+# SPICE full-circuit simulation
+
+This is based on [0202](./0202-2024-05-15.md):
+
+```bash
+cd mag
+make tt_um_algofoogle_tt08_vga_fun.sim.spice # Takes a few minutes; file is 13MB.
+# Copy out subckt line from .sim.spice file, and use for basis of sim/spice/full_spice_sim.cir `xtt` instance.
+# In full_spice_sim.cir, also remove brackets [] from ports.
+#NOTE: Last identifier is the name of the cell with _parax on the end: tt_um_algofoogle_tt08_vga_fun_parax
+# Replace VDPWR with vcc.
+```
+
+Extract TT08 pin loading circuit:
+*   Exported `tt08pin.sch` in Xschem as LVS subckt
+*   Put `tt08pin.spice` in `sim/spice/` and edited it to remove `GLOBAL`s and make `VAPWR` a port on the subckt, and delete internal voltage source on VAPWR.
+
 # Notes
 
+*   Could we delete decap (379) and fill (431) cells from .mag file before extraction?
 *   'Registered' mode (intended only for mode 0 pass-thru) is NOT implemented.
+*   BEWARE: Don't forget to check every signal name. I had `VGND` but this is not valid: it was meant to be `GND` but instead it just created a floating net called `VGND`, I think.
 
 
 # Digital block improvements
+
 *   If we have a spare mode (e.g. MODE_3), try an LFSR?
 *   Also, spare MODE_7 could be used for XOR3 but with voffset control added
 *   Implement 'registered' option for MODE 0 (PASS) -- should need 8 DFFs
 *   Would it be better to do separate mode_xor2 and mode_xor3 modules, or just use mode_xor2 with a gate on `tt` for MODE_XOR3? Does it make any difference to synthesis and logic optimization?
 *   Maybe MODE_3 could start with an LFSR, and otherwise swap between ALL modes every 32 lines
-
+*   Synchronous reset -- without a synchronous reset, we could probably control the design clock/reset carefully in the initial few clocks using the RP2040.
 
 # Before tapeout
 
 *   Make sure body/bulk/guard-ring connections are correct for our intent.
 *   Check connectivity of all vias in GDS.
-*   Look for weirdness, e.g. VDPWR/VGND horizontal straps have vias to M3 but M3 is unused??
+*   Look for weirdness
+
+# Next steps
+
+*   Commit/document full circuit SIM and cosim (mixed).
+
+# Next layout/design
+
+*   3 different DACs:
+    1.  csdac_nom with resistors
+    2.  csdac_bare (no resistors): PROBLEM, requires 2 analog pins! What about just 1, snaked?
+    3.  RDAC with opamp
+*   Other ideas:
+    *   res_xhigh_po 2k/sq instead of 320/sq
+*   Switching different things in/out (pass gates, or extra loads) using spare `uio_in` pins -- e.g. put pull-up resistors in series with big transistors that can disconnect them from vcc.
